--- a/client/src/pages/login/LoginUser.css
+++ b/client/src/pages/login/LoginUser.css
@@ -55,8 +55,17 @@ img {
     height: 100%;
     object-fit: cover;
     object-position: center;
-    opacity: 0.8;
     filter: blur(2px);
+}
+
+.black-filter {
+    position: absolute;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    opacity: 0.2;
 }
 
 .login__form {
