--- a/client/src/pages/register/RegisterUser.css
+++ b/client/src/pages/register/RegisterUser.css
@@ -55,8 +55,17 @@ img {
     height: 100%;
     object-fit: cover;
     object-position: center;
-    opacity: 0.8;
     filter: blur(2px);
+}
+
+.black-filter {
+    position: absolute;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    opacity: 0.2;
 }
 
 .login__form {
@@ -109,6 +118,36 @@ img {
 .login__input::placeholder {
     color: rgb(226, 226, 226);
     font-style: italic;
+}
+
+.login__check,
+.login__check-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.login__check {
+    margin-bottom: 1rem;
+    font-size: var(--small-font-size);
+}
+
+.login__check-box {
+    column-gap: 0.5rem;
+}
+
+.login__check-input {
+    width: 1rem;
+    height: 1rem;
+    accent-color: var(--white-color);
+}
+
+.login__forgot {
+    color: var(--white-color);
+}
+
+.login__forgot:hover {
+    text-decoration: underline;
 }
 
 .login__button {
