--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,3 +10,18 @@ body {
     background-color: #fff;
     color: black;
 }
+
+/* ------------------------dashboard------------------------- */
+.dashboard {
+
+}
+.user-card {
+    display: flex;
+    border-radius: 10px;
+}
+.user-info {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-start;
+}
