--- a/client/src/index.css
+++ b/client/src/index.css
@@ -232,7 +232,8 @@ body {
     border-radius: 0.5rem;
     padding: 1rem;
     box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
-    width: 45%;
+    width: 50vw;
+    min-width: 300px;
     min-width: max-content;
     height: min-content;
     /* margin: 1rem auto; */
@@ -372,7 +373,8 @@ body {
     border-radius: 0.5rem;
     padding: 1rem;
     box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
-    width: max-content;
+    width: 50vw;
+    min-width: 250px;
     display: flex;
     flex-direction: column;
     /* gap: 0.5rem */
@@ -426,10 +428,10 @@ body {
 .charity-filter {
     background-color: var(--primary-cream-dark);
     padding: 1rem;
-    box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 0.5rem 0.3rem rgba(0, 0, 0, 0.3);
     /* max-width: 300px; */
     min-width: 200px;
-    width: max-content;
+    width: 25vw;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -482,9 +484,8 @@ body {
 }
 
 .charity-container {
-    border: var(--primary-border);
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     width: 100%;
     gap: 2rem;
     padding: 2rem;
@@ -523,8 +524,9 @@ body {
     background-color: var(--primary-cream-dark);
     border-radius: 0.5rem;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
-    max-width: 800px;
-    width: 100%;
+    /* max-width: 800px; */
+    width: 50vw;
+    min-width: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -546,24 +548,25 @@ body {
 }
 
 .user-info {
-    text-align: center;
-    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+    padding-top: 1.1rem;
 }
 
 .user-info h2 {
     color: var(--primary-blue);
-    margin-bottom: 0.5rem;
 }
 
 .user-info p {
     color: var(--primary-blue-dark);
-    margin-bottom: 1.5rem;
 }
 
 .user-buttons {
     display: flex;
     justify-content: center;
-    margin-bottom: 2rem;
+    padding-block: 1rem;
 }
 
 .user-buttons button {
@@ -584,12 +587,9 @@ body {
 }
 
 .view-container {
-    border: var(--primary-border);
     width: 100%;
     padding: 2rem;
-    background-color: var(--primary-cream);
     border-radius: 0.5rem;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 768px) {
