--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
 }
 
 :root {
@@ -14,11 +16,721 @@
     --primary-green: #0bda51;
     --primary-border: 1px solid black;
 }
+
 body {
     width: 100vw;
     height: 100vh;
     background-color: #fff;
     color: black;
+    overflow-x: hidden;
+}
+
+a {
+    all: unset;
+    text-decoration: none;
+}
+
+/*---------------------------------Home---------------------------------------*/
+
+.bada_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.material-symbols-outlined {
+    overflow-y: hidden;
+    font-size: 500px;
+    font-variation-settings:
+        "FILL" 0,
+        "wght" 400,
+        "GRAD" 0,
+        "opsz" 24;
+}
+
+.firsttext {
+    /* border: 1px solid black; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 23px;
+    position: absolute;
+    left: 8%;
+    top: 25%;
+    width: min-content;
+}
+#heading {
+    font-size: 60px;
+    width: fit-content;
+    line-height: 70px;
+    color: #333;
+    /* opacity:100px;
+          */
+    /* font-weight: 200; */
+
+    overflow-y: hidden;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+#text2 {
+    color: #615f5c;
+    font-weight: 200;
+    width: max-content;
+}
+.firstbutton {
+    display: inline-block;
+    border-radius: 24px;
+    background-color: #78b2d8;
+    border: none;
+    color: #ffffff;
+    text-align: center;
+    font-size: 15px;
+    padding: 13px 12px;
+    font-weight: 600;
+    width: 210px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+}
+
+.firstbutton span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+
+.firstbutton span:after {
+    content: "\00bb";
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+
+.firstbutton:hover span {
+    padding-right: 25px;
+}
+
+.firstbutton:hover span:after {
+    opacity: 1;
+    right: 0;
+}
+
+.circularcharity img {
+    height: 350px;
+    width: 350px;
+    border-radius: 100%;
+    position: absolute;
+    left: 55vw;
+    top: 30vh;
+}
+
+.textLogo {
+    font-size: 37px;
+    transition: transform 0.5s ease;
+}
+.textLogo:hover {
+    transform: scale(1.1);
+}
+
+.first {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+    /* height: 100px; */
+    font-family: montserrat;
+    /* background-position:cover; */
+    background-repeat: no-repeat;
+    background-image: url("./components/Home/images/bg.jpg");
+
+    background-size: cover;
+}
+nav {
+    background: transparent;
+    height: 80px;
+    width: 100%;
+    z-index: 100;
+    overflow-y: hidden;
+    /* position: fixed; */
+}
+
+#navigation {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.nav-buttons {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    padding: 0px 2rem;
+}
+
+.nav-buttons button {
+    padding: 8px 10px;
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    border-radius: 10px;
+    border: 1px solid var(--primary-blue);
+    background: none;
+    box-shadow: 4px 4px black;
+    cursor: pointer;
+    transition: all 0.4s ease;
+}
+
+.nav-buttons button:hover {
+    background-color: var(--primary-blue-dark);
+    color: white;
+}
+.logo1 {
+    position: absolute;
+    top: -18px;
+    height: 120px;
+
+    transition: transform 0.5s ease;
+}
+.logo1:hover {
+    transform: scale(1.1);
+}
+label.logo {
+    color: white;
+    font-size: 35px;
+    line-height: 80px;
+    padding: 0 100px;
+    font-weight: bold;
+}
+
+nav ul {
+    float: right;
+    margin-right: 100px;
+}
+nav ul li {
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+nav ul li a {
+    color: white;
+    font-size: 17px;
+    padding: 7px 13px;
+    border-radius: 3px;
+    text-transform: uppercase;
+}
+a {
+    position: relative;
+    text-decoration: none; /* Remove default underline */
+    color: #333; /* Default text color */
+}
+
+a::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #78b2d8;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease;
+}
+
+/* Hover effect for anchor tag */
+a:hover::before {
+    visibility: visible;
+    transform: scaleX(1);
+}
+a.active,
+a:hover {
+    /* background:#78b2d8; */
+    /* text-decoration: underline; */
+    transition: 0.5s;
+}
+.fa-bars {
+    color: black;
+}
+.checkbtn {
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+#check {
+    display: none;
+}
+
+@media (max-width: 952px) {
+    label.logo {
+        font-size: 30px;
+        padding-left: 50px;
+    }
+    nav ul li a {
+        font-size: 16px;
+    }
+}
+@media (max-width: 858px) {
+    .checkbtn {
+        display: block;
+    }
+    ul {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #d8d3cd;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all 0.5s;
+    }
+    nav ul li {
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+    nav ul li a {
+        font-size: 20px;
+    }
+    a:hover,
+    a.active {
+        background: none;
+        color: #0082e6;
+    }
+    #check:checked ~ ul {
+        left: 0;
+    }
+}
+section {
+    /* background: url(bg.jpg) no-repeat; */
+    background-size: cover;
+    height: calc(100vh - 80px);
+}
+
+/* section2 css */
+.second {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.firsthead {
+    color: #0082e6;
+    font-size: 12px;
+}
+.cards1 {
+    display: flex;
+    flex-direction: row;
+    /* justify-content: sp; */
+    justify-content: center;
+    gap: 50px;
+    margin-top: 80px;
+}
+
+#secondhead {
+    margin-top: 40px;
+    color: #333;
+    font-size: 15px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+.circle {
+    background-color: #0891fa;
+    border-radius: 100%;
+    z-index: -1;
+    margin-left: -800px;
+    position: absolute;
+    /* size: 100px; */
+    height: 150px;
+    width: 150px;
+    /* z-index: ; */
+}
+.circle2 {
+    background-color: #0891fa;
+    border-radius: 100%;
+    z-index: -1;
+    margin-left: 820px;
+
+    margin-top: 700px;
+    position: absolute;
+    /* size: 100px; */
+    height: 150px;
+    width: 150px;
+    /* z-index: ; */
+}
+.cards2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 50px;
+}
+.second .card {
+    height: 250px;
+    width: 400px;
+    /* background-color: #0082e6; */
+    /* margin-right:80px; */
+    border-radius: 25px;
+    background-color: #fff6ea;
+    margin-top: 10px;
+    transition: 0.5s;
+}
+
+.card1head {
+    margin-left: 15%;
+    margin-top: 11%;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    align-items: center;
+}
+.contentofcard {
+    margin-left: 60px;
+    margin-top: 50px;
+}
+
+/* section3 css */
+
+.three p {
+    color: #0082e6;
+    font-size: 20px;
+    margin-top: 90px;
+    margin-left: 700px;
+    margin-bottom: 30px;
+}
+.three h1 {
+    color: #542d2d;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    font-size: 40px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    text-align: center;
+}
+.threecards {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.cardthree {
+    width: 280px;
+    height: 320px;
+    border-radius: 15px;
+    margin: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    background-color: #fff6ea;
+}
+
+.para {
+    position: relative;
+    z-index: 2;
+    /* width: 35%; */
+    width: fit-content;
+    bottom: 55%;
+    left: 5%;
+    border-radius: 20px;
+    background-color: #007bff;
+    color: #fff;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+.para p {
+    padding: 10px;
+}
+
+.cardthree img {
+    width: 100%;
+    height: 50%;
+    object-fit: cover;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
+.cardthree h3 {
+    font-size: 18px;
+    color: #000;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    color: #542d2d;
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
+
+.cardthree button {
+    background-color: #78b2d8;
+    color: #fff;
+    border: none;
+    border-radius: 15px;
+    width: 50%;
+    padding: 10px 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin: 20px;
+    font-size: 10px;
+    overflow-y: hidden;
+}
+
+.cardthree button:hover {
+    background-color: #0056b3;
+}
+.button3 {
+    background-color: white;
+    width: 90px;
+    font-size: 10px;
+    border-radius: 18px;
+    color: #0891fa;
+    height: 40px;
+    /* margin-top: 20px; */
+    position: relative;
+    left: 710px;
+    top: 40px;
+    cursor: pointer;
+    border: 0.6px solid grey;
+    position: relative;
+    left: 48%;
+}
+
+/* section3css end */
+
+/* section 4 */
+
+/* .unity-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 700px;
+    padding-left: 150px;
+  } */
+
+.maje {
+    margin-top: 150px;
+    margin-bottom: 0px;
+    width: 100vw;
+    height: 120vh;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    gap: 2vw;
+    font-family: montserrat;
+    background-image: url("./components/Home/images/bgFour.jpg");
+    background-repeat: no-repeat;
+    background-size: contain; /* Change this to cover or contain based on your preference */
+    overflow-x: hidden;
+}
+
+.unitypic {
+    padding-top: 12%;
+    padding-left: 8%;
+}
+.unitypic img {
+    height: 325px;
+    border-radius: 20px;
+}
+
+.submaje {
+    padding-top: 10%;
+    background-color: #fff6ea;
+    height: min-content;
+}
+
+.submaje p{
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    padding-top: 15px;
+    width: 28vw;
+}
+.subsubmaje {
+    background-color: #fff6ea;
+    height: 180px;
+    margin-top: -10%;
+}
+#button4 {
+    background-color: #fff6ea;
+    width: 90px;
+    font-size: 10px;
+    border-radius: 18px;
+    color: #0891fa;
+    height: 40px;
+    cursor: pointer;
+    border: 0.6px solid grey;
+    margin-top: 70px;
+}
+
+.cardFive {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 3rem;
+}
+.five {
+    /* display: flex;
+    justify-content: center; */
+    text-align: center;
+    overflow-x: hidden;
+}
+.five .fivehead {
+    color: #0082e6;
+    font-size: 15px;
+    margin-top: 70px;
+}
+.five h1 {
+    color: #542d2d;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    font-size: 40px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+.five .card {
+    height: 300px;
+    width: 310px;
+    background-color: #fff6ea;
+    border-radius: 10px;
+    transition: 0.5s;
+    margin-top: 10px;
+    margin-bottom: 40px;
+}
+.five .card1head {
+    margin-left: 12%;
+    margin-top: 11%;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    align-items: center;
+}
+.contentofcard {
+    width: 70%;
+    margin-left: 15%;
+}
+
+.card1head h3 {
+    color: #542d2d;
+}
+
+.card hr {
+    width: 60%;
+    margin-left: 55px;
+    color: #542d2d;
+    margin-top: 12px;
+}
+.card:hover {
+    transform: translateY(-10px);
+}
+#button5 {
+    background-color: white;
+    width: 90px;
+    font-size: 10px;
+    border-radius: 18px;
+    color: #0891fa;
+    height: 40px;
+    cursor: pointer;
+    border: 0.6px solid grey;
+    margin-top: 20px; /* Adjust margin as needed */
+}
+
+/* section 6 css */
+.six {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 30px;
+    margin-top: 80px;
+    background-color: #fff6ea;
+    overflow-x: hidden;
+}
+.six h3 {
+    color: #007bff;
+    font-size: 15px;
+    margin-top: 80px;
+}
+
+.six h1 {
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    color: #542d2d;
+}
+
+.sixcards {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 10px;
+}
+.cardsix {
+    width: 180px;
+    height: 250px;
+    border-radius: 15px;
+    margin: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    text-align: center;
+}
+
+.cardsix img {
+    width: 100%;
+    height: 50%;
+    object-fit: cover;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
+.cardsix h2 {
+    font-size: 18px;
+    color: #000;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    color: #542d2d;
+    overflow-y: hidden;
+}
+.cardsix p {
+    color: #dcb584;
+    position: relative;
+    top: 70px;
+    right: 40px;
+}
+.six h4 {
+    color: #fff6ea;
+    margin-top: 70px;
+}
+/* section6 :end */
+
+/* footer */
+.footer {
+    margin-top: 100px;
+    background-color: #0891fa;
+    height: 12vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
+.footer p {
+    background: white;
+    color: #007bff;
+    border-radius: 20px;
+    width: 14%;
+    padding: 2px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    position: relative;
+    text-align: center;
+    font-size: 16px;
+    z-index: 2;
 }
 
 /* ------------------------------registration-form---------------------------- */
@@ -332,9 +1044,9 @@ body {
     border-radius: 0.5rem;
     padding: 1rem;
     box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
-    width: 45vw;
-    min-width: 300px;
-    min-width: max-content;
+    /* width: 45vw; */
+    min-width: 45vw;
+    max-width: 50vw;
     height: min-content;
     /* margin: 1rem auto; */
 }
@@ -544,6 +1256,7 @@ body {
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
+    /* height: 100%; */
 }
 
 .charity-filter label {
@@ -595,7 +1308,7 @@ body {
 .charities {
     display: flex;
     justify-content: space-between;
-    height: 100vh;
+    /* height: 100vh; */
     width: 100vw;
 }
 
